@@ -41,7 +41,7 @@ import org.labkey.assay.plate.query.WellTable;
 import org.labkey.assay.query.AssayDbSchema;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -262,9 +262,9 @@ public final class PlateManagerTest
 
         // Act
         PlateSet plateSet = PlateManager.get().createPlateSet(container, user, plateSetImpl, List.of(
-                new PlateManager.CreatePlateSetPlate("testAccessPlateByIdentifiersFirst", plateType.getRowId(), null),
-                new PlateManager.CreatePlateSetPlate("testAccessPlateByIdentifiersSecond", plateType.getRowId(), null),
-                new PlateManager.CreatePlateSetPlate("testAccessPlateByIdentifiersThird", plateType.getRowId(), null)
+                new PlateManager.CreatePlateSetPlate("testAccessPlateByIdentifiersFirst", plateType.getRowId(), null, null),
+                new PlateManager.CreatePlateSetPlate("testAccessPlateByIdentifiersSecond", plateType.getRowId(), null, null),
+                new PlateManager.CreatePlateSetPlate("testAccessPlateByIdentifiersThird", plateType.getRowId(), null, null)
         ), null);
 
         // Assert
@@ -498,17 +498,17 @@ public final class PlateManagerTest
     public void getWellSampleData()
     {
         // Act
-        int[] sampleIdsSorted = new int[]{0, 3, 5, 8, 10, 11, 12, 13, 15, 17, 19};
-        Pair<Integer, List<Map<String, Object>>> wellSampleDataFilledFull = PlateManager.get().getWellSampleData(sampleIdsSorted, 2, 3, 0, container);
-        Pair<Integer, List<Map<String, Object>>> wellSampleDataFilledPartial = PlateManager.get().getWellSampleData(sampleIdsSorted, 2, 3, 6, container);
+        List<Integer> sampleIds = List.of(0, 3, 5, 8, 10, 11, 12, 13, 15, 17, 19);
+        Pair<Integer, List<Map<String, Object>>> wellSampleDataFilledFull = PlateManager.get().getWellSampleData(container, sampleIds, 2, 3, 0);
+        Pair<Integer, List<Map<String, Object>>> wellSampleDataFilledPartial = PlateManager.get().getWellSampleData(container, sampleIds, 2, 3, 6);
 
         // Assert
         assertEquals(wellSampleDataFilledFull.first, 6, 0);
-        ArrayList<String> wellLocations = new ArrayList<>(Arrays.asList("A1", "A2", "A3", "B1", "B2", "B3"));
+        List<String> wellLocations = List.of("A1", "A2", "A3", "B1", "B2", "B3");
         for (int i = 0; i < wellSampleDataFilledFull.second.size(); i++)
         {
             Map<String, Object> well = wellSampleDataFilledFull.second.get(i);
-            assertEquals(well.get("sampleId"), sampleIdsSorted[i]);
+            assertEquals(well.get("sampleId"), sampleIds.get(i));
             assertEquals(well.get("wellLocation"), wellLocations.get(i));
         }
 
@@ -516,14 +516,14 @@ public final class PlateManagerTest
         for (int i = 0; i < wellSampleDataFilledPartial.second.size(); i++)
         {
             Map<String, Object> well = wellSampleDataFilledPartial.second.get(i);
-            assertEquals(well.get("sampleId"), sampleIdsSorted[i + 6]);
+            assertEquals(well.get("sampleId"), sampleIds.get(i + 6));
             assertEquals(well.get("wellLocation"), wellLocations.get(i));
         }
 
         // Act
         try
         {
-            PlateManager.get().getWellSampleData(new int[]{}, 2, 3, 0, container);
+            PlateManager.get().getWellSampleData(container, Collections.emptyList(), 2, 3, 0);
         }
         // Assert
         catch (IllegalArgumentException e)
